# smartscreen-client

./: .gitignore  README.md  demo_run.sh  install.sh  settings.json  smarscreen.code-workspace
lib/: CMakeLists.txt  Makefile  calander.py  credentials.json  get_data.py  install.sh  ipc.py  location.py  main.cpp  settings.json  smartscreen.py  token.json  version.cpp
lib/bash/: compile_python.sh  install.sh
lib/cmake/: FindSDL2.cmake
